src/App.css
/* General */
.text-light {
  font-weight: 300;
}
.text-bold {
  font-weight: 700;
}

.truncate {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

/* Station Board */
.station-board {
  display: flex;
  flex-direction: column;
  gap: 20px;
}

.station-board h1 {
  margin-block: -0.25em;
}

.station-board h2 {
  margin-block: -0.25em;
}

.station-board p {
  margin-block: -0.25em;
}

header {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

.arrivals-panel-list {
  display: flex;
  flex-direction: column;
  gap: 26px;
}

/* Arrival Panel */
.arrival-panel-outer {
  position: relative;
}

.arrival-panel-outer {
  background-color: #424242;
  border-radius: 8px;

  display: flex;
  flex-direction: row;
  align-items: center;
  gap: 20px;
}

.arrival-panel-train-logo {
  height: 90px;
}

.arrival-panel-destination {
  flex-grow: 1;
  display: flex;
  flex-direction: column;
  gap: 3px;
}

.arrival-panel-destination p {
  font-size: 1.6em;
}

.arrival-panel-arrival-time {
  display: flex;
  flex-direction: column;
  align-items: flex-end;
  margin-right: 6px;
}

.arrival-panel-arrival-time p {
  font-size: 1.15em;
}

.arrival-panel-backing {
  /* background-color: red; */
  background-color: #242424;
}

.arrival-panel-backing-fade {
  /* background-color: blue; */
  background: linear-gradient(to right, #242424, rgba(36, 36, 36, 0));
}

.arrival-panel-darken-below {
  /* background-color: green; */
  background-color: rgba(36, 36, 36, 0.2)
}

/* Clock */
.clock {
  font-size: 2.2em;
}

/* Mobile */
@media (max-width: 800px) {
  #root {
    padding: 15px;
  }

  h1 {
    font-size: 1.0em;
  }

  h2 {
    font-size: 1.0em;
  }

  .station-board {
    gap: 10px;
  }

  .arrivals-panel-list {
    gap: 10px;
  }

  .arrival-panel-outer {
    gap: 8px;
  }

  .arrival-panel-destination p {
    font-size: 0.8em;
  }

  .arrival-panel-arrival-time {
    margin-right: 2px;
    gap: 2px;
  }
  
  .arrival-panel-arrival-time p {
    font-size: 0.5em;
    margin-top: -0.5em;
  }

  .arrival-panel-train-logo {
    height: 35px;
  }

  .clock {
    font-size: 0.7em;
  }
}

